--- a/temp.html
+++ b/temp.html
@@ -3,34 +3,32 @@
 <head>
 	<meta charset="UTF-8" />
 	<title>Mauricio Fonseca</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 	<link rel="stylesheet" type="text/css" href="css/normalize.css" />
+	<link rel="stylesheet" type="text/css" href="css/icons.css" />
+	<link rel="stylesheet" type="text/css" href="css/icons_sm.css" />
 	<link rel="stylesheet" type="text/css" href="css/component.css" />
 	<link rel="stylesheet" type="text/css" href="css/demo.css" />
 	<link rel="stylesheet" type="text/css" href="css/all_style.css" />
+
 	<link rel="stylesheet" type="text/css" href="css/style3.css" />
 	<link rel="stylesheet" type="text/css" href="css/fullmenu1.css" />
-	<link rel="stylesheet" type="text/css" href="css/icons.css" />
-	<link rel="stylesheet" type="text/css" href="css/glisse.css">
+
 	<link rel="stylesheet" href="css/foundation.css" />
-	<link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:400,700,300' rel='stylesheet' type='text/css'>
-	<script src="//use.edgefonts.net/bebas-neue:n4:all.js"></script>
+	<link href='http://fonts.googleapis.com/css?family=Quicksand:300,400,700' rel='stylesheet' type='text/css'>
 	<script src="js/modernizr.custom.94927.js"></script>
-	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-
-
-	<script type="text/javascript" src="js/glisse.js"></script>
+	<script src="js/angular.min.js"></script>
+	
 </head>
-<body ng-controller="homeController">
+<body >
+
 	<!-- Top Navigation -->
 	<header role="top">
 		<div class="content">
-			<figure class="logo"><a href="#home"><img src="images/logo_mf_sfinal.png"/></a></figure>
+			<figure class="logo"><a href="#/home"><img src="images/logo_mauricio_fonseca.jpg"/></a></figure>
 			<nav class="menu">
 				<ul>
-					<li><a id="trigger-overlay">My work</a></li>
-					<li><a href="#aboutme">About me</a></li>
-					<li><a href="">Events</a></li>
+					<li><a id="trigger-overlay">Work</a></li>
+					<li><a href="">About me</a></li>
 					<li><a href="">My Blog</a></li>
 					<li><a class="md-trigger" data-modal="modal-1">Contact me</a></li>
 				</ul>
@@ -38,34 +36,31 @@
 		</div>
 	</header>
 	 <section role="content" class="contenido" >
-	 	<div class="content">
 	 	<!--start content-->
-	 		<div ng-view></div>
+	 	contenido {{1 + 8}}
     	<!--end content-->
-   		</div>
 	 </section>
 
 	 <footer>
 	 	<div class="content">
 		 	<section class="rights">Mauricio Fonseca © 2014 | <a href="">Privacy policy</a></section>
 		 	<section class="socialmedia">
-		 		<a href="" class="icon-facebook2"></a>
-		 		<a href="" class="icon-twitter2"></a>
+		 		<a href="" class="icon-facebook"></a>
+		 		<a href="" class="icon-twitter"></a>
 		 		<a href="" class="icon-instagram"></a>
 		 	</section>
 		</div>
-
 	 </footer>
 			 <!-- open/close -->
 	<div class="overlay overlay-hugeinc">
 		<button type="button" class="overlay-close">Close</button>
 		<nav>
 			<ul>
-				<li><a href="#galeria"  class="select">Recent</a></li>
-				<li><a href="#galeria2" class="select">Artistic</a></li>
-				<li><a href="#galeria" class="select">Ladies</a></li>
-				<li><a href="#galeria" class="select">Gents</a></li>
-				<li><a href="#galeria" class="select">Animals</a></li>
+				<li><a href="galerias.html">Recent</a></li>
+				<li><a href="galerias.html">Artistic</a></li>
+				<li><a href="galerias.html">Ladies</a></li>
+				<li><a href="galerias.html">Gents</a></li>
+				<li><a href="galerias.html">Animals</a></li>
 			</ul>
 		</nav>
 	</div>
@@ -84,13 +79,19 @@
 		</div>
 	</div>
 </div>
+
 <script src="js/modalEffects.js"></script>
+
+<script>
+var polyfilter_scriptpath = '/js/';
+</script>
+<script src="js/cssParser.js"></script>
+<script src="js/css-filters-polyfill.js"></script>
+
 <script src="js/classie.js"></script>
 <script src="js/demo1.js"></script>
-<script src="js/angular.min.js"></script>
-<script src="js/angular-route.js"></script>
+<script src="/js/angular-route.js"></script>
 <script src="js/app.js"></script>
-
 
 </body>
 </html>
